[gd_scene load_steps=2 format=2]

[ext_resource path="res://PruebaAPI.gd" type="Script" id=1]

[node name="PruebaAPI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0
text = "Llamada API"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 40.0
margin_right = 75.0
margin_bottom = 90.0
text = "Cargar archivo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 82.0
margin_top = 132.0
margin_right = 385.0
margin_bottom = 490.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
